--- a/assignments/assignment-1/01-assignment-part-1.ipynb
+++ b/assignments/assignment-1/01-assignment-part-1.ipynb
@@ -16,9 +16,9 @@
    "metadata": {},
    "source": [
     "```\n",
-    "assignment-1/part-A.ipynb\n",
+    "assignment-1/low_rank_gaussians_1.ipynb\n",
     "\n",
-    "assignment-1/part-B.ipynb\n",
+    "\n",
     "```\n",
     "\n",
     "In the above example the TA will see the output of `assignment-1/part-A.ipynb` first, then `assignment-1/part-B.ipynb` to grade your assignment 1. If there is a part that itself is a folder, name the subfolder as `part-A` or `part-B` and put the files inside it.\n",
