--- a/notebooks/assignments/dim-reduction/low_rank_gaussians_1.ipynb
+++ b/notebooks/assignments/dim-reduction/low_rank_gaussians_1.ipynb
@@ -1,121 +1,148 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Low-Rank Structure in Gaussian Covariances\n",
-    "\n",
-    "This notebook explores how low-rank changes in Gaussian coefficient matrices affect covariance structure.\n",
-    "The emphasis is on empirical covariance, eigenvalues, and matrix rank."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JeYMj2efRWOa"
+      },
+      "source": [
+        "# Low-Rank Structure in Gaussian Covariances\n",
+        "\n",
+        "This notebook explores how low-rank changes in Gaussian coefficient matrices affect covariance structure.\n",
+        "The emphasis is on empirical covariance, eigenvalues, and matrix rank."
+      ],
+      "id": "JeYMj2efRWOa"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ea-Fl0BdRWOc"
+      },
+      "source": [
+        "## Background\n",
+        "\n",
+        "$$\n",
+        "x = W z + \\varepsilon,\\quad z \\sim \\mathcal{N}(0, I_k),\\quad \\varepsilon \\sim \\mathcal{N}(0, \\sigma^2 I_d)\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\Sigma = W W^\\top + \\sigma^2 I_d.\n",
+        "$$"
+      ],
+      "id": "ea-Fl0BdRWOc"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "N__LQN4oRWOc"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from numpy.linalg import eigvalsh\n",
+        "\n",
+        "rng = np.random.default_rng(0)"
+      ],
+      "id": "N__LQN4oRWOc"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vNDo0dFlRWOc"
+      },
+      "outputs": [],
+      "source": [
+        "d = 40\n",
+        "k = 8\n",
+        "sigma = 0.1\n",
+        "n = 1500\n",
+        "\n",
+        "W0 = rng.normal(size=(d, k))\n",
+        "Sigma0 = W0 @ W0.T + sigma**2 * np.eye(d)"
+      ],
+      "id": "vNDo0dFlRWOc"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mkXTVQUSRWOd"
+      },
+      "source": [
+        "## Low-Rank vs Diffuse Coefficient Changes"
+      ],
+      "id": "mkXTVQUSRWOd"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jSTkyLj_RWOd"
+      },
+      "outputs": [],
+      "source": [
+        "rank_star = 2\n",
+        "\n",
+        "B = rng.normal(size=(d, rank_star))\n",
+        "A = rng.normal(size=(rank_star, k))\n",
+        "DeltaW_lr = B @ A\n",
+        "\n",
+        "D = rng.normal(size=(d, k))\n",
+        "DeltaW_dense = D / np.linalg.norm(D, 'fro') * np.linalg.norm(DeltaW_lr, 'fro')"
+      ],
+      "id": "jSTkyLj_RWOd"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "h4iH1uyBRWOd"
+      },
+      "outputs": [],
+      "source": [
+        "def sample(W):\n",
+        "    z = rng.normal(size=(n, k))\n",
+        "    eps = sigma * rng.normal(size=(n, d))\n",
+        "    return z @ W.T + eps\n",
+        "\n",
+        "S_lr = (sample(W0 + DeltaW_lr).T @ sample(W0 + DeltaW_lr)) / n\n",
+        "S_dense = (sample(W0 + DeltaW_dense).T @ sample(W0 + DeltaW_dense)) / n"
+      ],
+      "id": "h4iH1uyBRWOd"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HBxPJh5HRWOd"
+      },
+      "outputs": [],
+      "source": [
+        "eig0 = eigvalsh(Sigma0)\n",
+        "eig_lr = eigvalsh(S_lr)\n",
+        "eig_dense = eigvalsh(S_dense)\n",
+        "\n",
+        "plt.semilogy(eig0[::-1], label='Reference')\n",
+        "plt.semilogy(eig_lr[::-1], label='Low-rank shift')\n",
+        "plt.semilogy(eig_dense[::-1], label='Diffuse shift')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "id": "HBxPJh5HRWOd"
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Background\n",
-    "\n",
-    "$$\n",
-    "x = W z + \\varepsilon,\\quad z \\sim \\mathcal{N}(0, I_k),\\quad \\varepsilon \\sim \\mathcal{N}(0, \\sigma^2 I_d)\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\Sigma = W W^\\top + \\sigma^2 I_d.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from numpy.linalg import eigvalsh\n",
-    "\n",
-    "rng = np.random.default_rng(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = 40\n",
-    "k = 8\n",
-    "sigma = 0.1\n",
-    "n = 1500\n",
-    "\n",
-    "W0 = rng.normal(size=(d, k))\n",
-    "Sigma0 = W0 @ W0.T + sigma**2 * np.eye(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Low-Rank vs Diffuse Coefficient Changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank_star = 2\n",
-    "\n",
-    "B = rng.normal(size=(d, rank_star))\n",
-    "A = rng.normal(size=(rank_star, k))\n",
-    "DeltaW_lr = B @ A\n",
-    "\n",
-    "D = rng.normal(size=(d, k))\n",
-    "DeltaW_dense = D / np.linalg.norm(D, 'fro') * np.linalg.norm(DeltaW_lr, 'fro')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample(W):\n",
-    "    z = rng.normal(size=(n, k))\n",
-    "    eps = sigma * rng.normal(size=(n, d))\n",
-    "    return z @ W.T + eps\n",
-    "\n",
-    "S_lr = (sample(W0 + DeltaW_lr).T @ sample(W0 + DeltaW_lr)) / n\n",
-    "S_dense = (sample(W0 + DeltaW_dense).T @ sample(W0 + DeltaW_dense)) / n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eig0 = eigvalsh(Sigma0)\n",
-    "eig_lr = eigvalsh(S_lr)\n",
-    "eig_dense = eigvalsh(S_dense)\n",
-    "\n",
-    "plt.semilogy(eig0[::-1], label='Reference')\n",
-    "plt.semilogy(eig_lr[::-1], label='Low-rank shift')\n",
-    "plt.semilogy(eig_dense[::-1], label='Diffuse shift')\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
